tests/ui/errors/snapshots/infer_cannot_auto_address_map_index_receiver.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Expression not modifiable
    ╭─[test.lis:12:4]
 11 │   let mut m = Map.new<string, Foo>();
 12 │   m["key"].increment()
    ·    ────────┬────────
    ·            ╰── modifies its receiver
 13 │ }
    ╰────
  help: Assign the map lookup to a variable first, then call the method. The receiver of `increment` is `mut Ref<Foo>`, not `Foo` · code: [infer.cannot_auto_address_receiver]
