tests/ui/errors/snapshots/infer_cannot_infer_type_arguments.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing type argument
   ╭─[test.lis:3:12]
 2 │ fn test() {
 3 │   let ch = Channel.new();
   ·            ──────┬──────
   ·                  ╰── expected type argument
 4 │ }
   ╰────
  help: Supply a type argument for the call, e.g. `Channel.new<int>()` · code: [infer.missing_type_argument]
