tests/ui/errors/snapshots/infer_cannot_take_address_of_literal.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Non-addressable expression
   ╭─[test.lis:6:13]
 5 │ fn main() {
 6 │   takes_ref(&42)
   ·             ─┬─
   ·              ╰── cannot take address of literal
 7 │ }
   ╰────
  help: Assign the value to a variable first, then take its address · code: [infer.non_addressable_expression]
