tests/ui/errors/snapshots/infer_cast_fn_writer_to_reader_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing write permission
    ╭─[test.lis:9:17]
  8 │ fn test() {
  9 │   let handler = writer as Handler
    ·                 ────────┬────────
    ·                         ╰── expected `Handler`, found `fn (mut Ref<Node>) -> ()`
 10 │   let node = Node { value: 1 }
    ╰────
  help: A function value may demand less permission than its type promises, never more. Match `mut` on each differing parameter, or expect `fn (mut Ref<Node>) -> ()` instead · code: [infer.needs_writable]
